--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Tawhid Turjo-About</title>
+    <title>Tawhid Turjo-Home</title>
     <link rel="shortcut icon" href="images/Tiltle LOGO.svg">
     <meta name="description" content="" />
     <meta name="author" content="Tooplate" />
