--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               </ul>
             </div>
             <div class="copyright-text">
-              <p>Copyright 2022 Tawhid Turjo</p>
+              <p>Copyright 2023 Tawhid Turjo</p>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
               </div>
               <div class="col-md-4">
                 <div class="right-image">
-                  <img src="images/About.png" alt="" />
+                  <img src="images/About.svg" alt="" />
                 </div>
 
               </div>
